--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a href="/new">go to form</a>
+      <a href="<%= formLink %>">go to form</a>
     </header>
 
     <h1><%= title %></h1>
